--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,25 +3,17 @@ name: Node.js CI
 on: [push]
 
 jobs:
-  build:
-
+  tests:
+    env:
+      SCOPE_DSN: ${{ secrets.SCOPE_DSN }}
+      CI: true
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm test
-      env:
-        CI: true
-    - name: Scope for Javascript
-      uses: undefinedlabs/scope-for-javascript-action@v1
-      with:
-        dsn: ${{secrets.SCOPE_DSN}}
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm install
+      - run: npm test
